--- a/FormularioDinamico/app/src/main/res/values/colors.xml
+++ b/FormularioDinamico/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorFondo">#fcfbfb</color>
+    <color name="colorFondo">#d3e2f5</color>
+    <color name="colorFondoPanel">#fff4f4</color>
 </resources>
